--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
+    "i18next": "^22.0.4",
     "react": "18.0.0",
     "react-dom": "18.0.0",
+    "react-i18next": "^12.0.0",
     "react-native": "0.69.6",
     "react-native-web": "~0.18.7",
     "styled-components": "^5.3.6"
@@ -27,12 +29,14 @@
     "@types/styled-components-react-native": "^5.2.0",
     "@typescript-eslint/eslint-plugin": "^5.40.1",
     "@typescript-eslint/parser": "^5.40.1",
+    "babel-plugin-i18next-extract": "^0.9.0",
+    "babel-plugin-module-resolver": "^4.1.0",
+    "eslint": "^8.26.0",
     "eslint-import-resolver-typescript": "^3.1.4",
     "eslint-plugin-import": "^2.26.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react-native": "^4.0.0",
     "prettier": "^2.7.1",
-    "eslint": "^8.26.0",
     "typescript": "~4.3.5"
   },
   "private": true
